[gd_scene load_steps=4 format=2]

[ext_resource path="res://balas/bala.png" type="Texture" id=1]
[ext_resource path="res://balas/bullet.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3, 3 )

[node name="bullet" type="Area2D"]
collision_layer = 8
collision_mask = 5
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.8
autostart = true

[connection signal="area_entered" from="." to="." method="_on_bullet_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_bullet_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
